--- a/less/blocks/download.less
+++ b/less/blocks/download.less
@@ -1,23 +1,26 @@
 .download {
   &__description {
-    .text ();
-    color: @white;
+    font-size: 14px;
+    line-height: 1.500em;
+    color: white;
   }
   &__links {
     margin: 40px auto 30px;
   }
-  &__link--apple {
-    background: url("../../img/logo-apple.svg") no-repeat;
-    width: 40px;
-    height: 50px;
-    // span {
-    //   display: none;
-    // }
-  }
-  &__link--android {
-    background: url("../../img/logo-android.svg") no-repeat;
-  }
-  &__link--windows {
-    background: url("../../img/logo-microsoft.svg") no-repeat;
+  &__link {
+    display: inline-block;
+    vertical-align: bottom;
+    width: 65px;
+    height: 65px;
+    font-size: 0;
+    &--apple {
+      background: url("../../img/logo-apple.svg") no-repeat;
+    }
+    &--android {
+      background: url("../../img/logo-android.svg") no-repeat;
+    }
+    &--windows {
+      background: url("../../img/logo-microsoft.svg") no-repeat;
+    }
   }
 }
