--- a/less/blocks/edit.less
+++ b/less/blocks/edit.less
@@ -3,26 +3,29 @@
   min-height: 760px;
   &__wrapper {
     padding: 0 20px;
+    @media @tablet-widths {
+      .container();
+    }
   }
   &__slogan {
-    .slogan ();
+    font-size: 14px;
+    line-height: 1.875em;
     margin: 0 auto;
     text-align: center;
     padding: 50px 0;
     color: @blue;
     background: @white;
+    @media @tablet-widths {
+      font-size: 18px;
+    }
     span {
       display: block;
     }
   }
-}
-
-@media @tablet-widths {
-  .edit {
-    min-height: 710px;
-    &__wrapper {
-      .container;
-      .clearfix;
+  &__controls-range {
+    width: 100%;
+    @media @tablet-widths {
+      display: none;
     }
   }
 }
