--- a/less/style.less
+++ b/less/style.less
@@ -1,9 +1,21 @@
+@import url("variables.less");
+
+@import url("global/font.less");
+@import url("global/main.less");
+
 @import url("blocks/advantages.less");
+@import url("blocks/btn.less");
+@import url("blocks/checkbox.less");
 @import url("blocks/contacts.less");
+@import url("blocks/controls.less");
 @import url("blocks/download.less");
 @import url("blocks/edit.less");
+@import url("blocks/field-text.less");
+@import url("blocks/form.less");
 @import url("blocks/index-header.less");
 @import url("blocks/info-download.less");
+@import url("blocks/like.less");
+@import url("blocks/logo.less");
 @import url("blocks/main-nav.less");
 @import url("blocks/modal-content.less");
 @import url("blocks/page-footer.less");
@@ -12,20 +24,9 @@
 @import url("blocks/photo.less");
 @import url("blocks/photos.less");
 @import url("blocks/prices.less");
+@import url("blocks/radio.less");
 @import url("blocks/reply.less");
 @import url("blocks/review.less");
+@import url("blocks/slider.less");
 @import url("blocks/social-links.less");
-
-@import url("global/btn.less");
-@import url("global/checkbox.less");
-@import url("global/color.less");
-@import url("global/form.less");
-@import url("global/field-text.less");
-@import url("global/main.less");
-@import url("global/radio.less");
-@import url("global/slider.less");
-@import url("global/table.less");
-@import url("global/typography.less");
-
-@import url("variables.less");
-
+@import url("blocks/table.less");
