--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,10 @@
 @mobile-widths-only: ~"(max-width: 699px)";
 @tablet-widths: ~"(min-width: 700px)";
 @desktop-widths: ~"(min-width: 1200px)";
+
+@white: #fff;
+@blue: #283645;
+@pink: #d22856;
+@grey: #f2f2f2;
+@light-grey: #c1c4c6;
+@dark-blue: #1d2631;
