--- a/less/blocks/info-download.less
+++ b/less/blocks/info-download.less
@@ -1,10 +1,10 @@
 .info-download {
   padding-top: 486px;
+  z-index: 5;
   &__slogan {
     display: none;
   }
 }
-
 @media @tablet-widths {
   .info-download {
     padding-top: 210px;
@@ -12,22 +12,22 @@
     width: 300px;
     &__slogan {
       display: block;
-      font-weight: 100;
+      font-size: 40px;
+      line-height: 1.333em;
+      font-weight: 300;
       width: 210px;
       margin: 0 auto;
       padding-bottom: 40px;
       text-align: center;
-      .tablet-slogan();
-      color: @white;
-      font-weight: normal;
+      color: white;
     }
   }
 }
-
 @media @desktop-widths {
   .info-download {
      &__slogan {
-      .desktop-slogan ();
+      font-size: 50px;
+      line-height: 1.667em;
       width: 270px;
      }
   }
