--- a/less/blocks/photo-content.less
+++ b/less/blocks/photo-content.less
@@ -1,40 +1,27 @@
 .photo-content {
-  min-height: 2300px;
   padding: 0 20px;
-  .outline ();
   &__slogan {
-    .slogan ();
+    font-size: 14px;
+    line-height: 1.875em;
     font-weight: normal;
     text-align: center;
     margin: 0 auto;
     padding: 50px 0;
-  }
-}
-
-@media @tablet-widths {
-  .photo-content {
-    min-height: 2315px;
-    &__wrapper {
-      .outline();
-      .container ();
-      .clearfix ();
-    }
-    &__slogan {
-      .font-size ();
+    @media @tablet-widths {
+      font-size: 18px;
+      line-height: 1.875em;
       width: 500px;
       padding-top: 100px;
       padding-bottom: 80px;
     }
-  }
-}
-
-@media @desktop-widths {
-  .photo-content {
-    min-height: 2055px;
-    &__slogan {
+    @media @desktop-widths {
       width: 590px;
       padding-top: 100px;
       padding-bottom: 95px;
     }
   }
+  &__wrapper {
+    .container();
+  }
 }
+
