--- a/less/blocks/prices.less
+++ b/less/blocks/prices.less
@@ -1,12 +1,26 @@
 .prices {
   min-height: 470px;
-  .outline();
+  background: @grey;
+  position: relative;
   &__table {
+    overflow: hidden;
+    width: 250%;
     margin: 0 auto;
-    .outline ();
+    padding-top: 70px;
+    @media @tablet-widths {
+      width: 100%;
+    }
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    top: 0;
+    left: 0;
+    background: linear-gradient(176deg, white 50%, @grey 50%);
   }
 }
-
 @media @tablet-widths {
   .prices {
     min-height: 380px;
@@ -19,7 +33,6 @@
     }
   }
 }
-
 @media @desktop-widths {
   .prices {
     min-height: 530px;
