--- a/less/blocks/reply.less
+++ b/less/blocks/reply.less
@@ -1,48 +1,39 @@
 .reply {
-  min-height: 2270px;
   padding: 0 20px;
   &__slogan {
-    .slogan ();
+    font-size: 14px;
+    line-height: 1.875em;
     font-weight: normal;
     text-align: center;
     margin: 0 auto;
     padding: 50px 0;
-    span {
-      display: none;
+    @media @tablet-widths {
+      font-size: 18px;
+      line-height: 1.875em;
+      width: 500px;
+      padding-top: 100px;
+      padding-bottom: 70px;
     }
-  }
-}
-
-@media @tablet-widths {
-  .reply {
-  min-height: 2440px;
-  &__wrapper {
-    .container ();
-    .clearfix ();
-  }
-  &__slogan {
-    .font-size ();
-    width: 500px;
-    padding-top: 100px;
-    padding-bottom: 70px;
-    span {
-      display: block;
-      }
-    }
-  }
-}
-
-@media @desktop-widths {
-  .reply {
-    min-height: 1500px;
-    &__slogan {
+    @media @desktop-widths {
       width: 765px;
       padding-top: 100px;
       padding-bottom: 80px;
-      span {
+    }
+    span {
+      display: none;
+      @media @tablet-widths {
+        display: block;
+      }
+      @media @desktop-widths {
         display: inline-block;
         vertical-align: inherit;
       }
+    }
+  }
+  &__wrapper {
+    @media @tablet-widths {
+      .container ();
+      .clearfix ();
     }
   }
 }
